Stopped button's falling outside sidepanel if they don't fit (FF only)
In FF buttons don't fit on the sidepanel on most smaller screens. In
Chrome this would only happen with ridicilously long names.

--- a/skirmish.css
+++ b/skirmish.css
@@ -26,6 +26,7 @@ body {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
+    overflow: hidden;
 }
 
 #DarkModeButton {
